--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
     </p>
     <a href="https://www.bombaestereo.com/">Visit their website</a>
     <button>🎵 Listen here</button>
-    <p class="built">This page was built by Melissa Matos.</p>
+    <footer class="built">
+      This project was coded by <strong>Melissa Matos</strong> and is<a
+        href="https://github.com/mmatos394/Music-Landing-Page"
+        target="_blank"
+        >open-sourced on GitHub.</a
+      >
+    </footer>
     <script>
       function listenHere() {
         let name = prompt("What is your name?");
